added size to button

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# package managers lock file
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+
+# npm local config
+.npmrc
