--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nataui/react": "^0.1.0",
+    "@nataui/react": "link:./../dist/",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
