--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dist",
     "README.md"
   ],
-  "types": "dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "main": "./dist/nataui.umd.js",
   "module": "./dist/nataui.es.js",
   "exports": {
@@ -77,11 +77,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
+    "sass": "^1.62.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
+    "vite-plugin-dts": "^2.3.0",
     "vitest": "^0.29.4"
-  },
-  "dependencies": {
-    "sass": "^1.60.0"
   }
 }
