--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
     "noImplicitAny": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "module": "ESNext",
     "declaration": true,
-    "declarationDir": "types",
+    "declarationDir": "dist",
     "sourceMap": true,
     "outDir": "dist",
     "moduleResolution": "node",
