--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
   "scripts": {
     "clean:output": "rimraf dist",
     "rollup:run": "rollup -c",
-    "build": "npm run clean:output && npm run rollup:run"
+    "build": "npm run clean:output && npm run rollup:run",
+    "dev": "ladle serve --port 4123"
   },
   "devDependencies": {
+    "@ladle/react": "^2.12.3",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.1.1",
