--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "clean:output": "rimraf dist",
     "rollup:run": "rollup -c",
     "build": "npm run clean:output && npm run rollup:run",
-    "dev": "ladle serve --port 4123"
+    "dev": "ladle serve --port 4123",
+    "test": "vitest"
   },
   "devDependencies": {
     "@ladle/react": "^2.12.3",
@@ -73,7 +74,7 @@
     "@types/jest": "^29.5.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "jest": "^29.5.0",
+    "jsdom": "^22.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
@@ -83,6 +84,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.62.1",
     "tslib": "^2.5.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vitest": "^0.31.0"
   }
 }
