--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "emitDeclarationOnly": true,
-    "rootDir": "src"
-  }
+  },
+  "include": ["src"],
 }
